<resources>
    <string name="app_name">ControlVet</string>
    <string name="agregar">Agregar Datos</string>
    <string name="ver">Visualizar Datos</string>
    <string name="notific">Agregar Notificaciones</string>
    <string name="titulo1">FORMULARIO PARA AGREGAR MASCOTAS</string>
    <string name="titulo2">Datos del propietario</string>
    <string name="vacunas">Agregar Vacunas</string>
    <string name="web">Ir a la web</string>
    <string name="todo">TODO</string>
    <string name="map">MAPA</string>
    <string name="base_de_datos">Base de datos (Desarrollador)</string>
    <string name="Eliminar_Datos">Eliminar Datos</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps02">MapsActivity02</string>
    <string name="Chat">Chat</string>
    <string name="title_activity_chat">chat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>