<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="186dp"
            android:layout_height="152dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/circuloicono"
            android:contentDescription="@string/todo"
            android:rotation="0"
            android:rotationY="0"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/base_de_datos"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="#79FF0000"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black"
        ></Button>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="166dp"
                android:layout_height="83dp"
                android:layout_marginStart="122dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="#79FF0000"
                android:onClick="Siguiente1"
                android:text="@string/agregar"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.463"
                app:strokeColor="@color/black" />

            <Button
                android:id="@+id/button2"
                android:layout_width="166dp"
                android:layout_height="83dp"
                android:layout_marginStart="122dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:onClick="Siguiente2"
                android:text="@string/ver"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?attr/materialButtonOutlinedStyle"
                android:backgroundTint="#79FF0000"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="166dp"
                android:layout_height="83dp"
                android:layout_marginStart="122dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:onClick="Siguiente3"
                android:text="@string/notific"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                style="?attr/materialButtonOutlinedStyle"
                android:backgroundTint="#79FF0000"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="166dp"
                android:layout_height="83dp"
                android:layout_marginStart="122dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:onClick="Siguiente4"
                android:text="@string/vacunas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                style="?attr/materialButtonOutlinedStyle"
                android:backgroundTint="#79FF0000"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>